Always generate an installer